<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TextBookCrazy</string>
    <string name="company">TextBook Limited.</string>
    <string name="text_facebook">『TextBookCrazy』 is application which can find where you&#8217;re popular.Let&#8217;s connect with world by this intuitive type application!</string>
    <string name="share_fb_succes">Completed</string>
    <string name="share_fb_error">Posting was failed.</string>
    <string name="applicationId">1392068441048828</string>

    <!-- signup -->
    <string name="signup">Signup</string>
    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="email">Email:</string>
    <string name="alert">Alert:</string>
    <string name="security_question">Security questions</string>
    <string name="question">Question:</string>
    <string name="answer">Answer:</string>
    <string name="signup_title">SIGN UP</string>
    <string name="signuping">Signup...</string>
    <string name="signup_fail">Can not signup now</string>
    <string name="email_get">Email has already been taken</string>
    <string name="file_not_found">File not found. Please try another.</string>

    <!-- forgot password -->
    <string name="submit">Submit</string>
    <string name="forgot_password_title">Forgot Password</string>
    <string name="cancel">Cancel</string>
    <string name="get_pass_nosuccess">Can not get password for this email</string>
    <string name="get_pass_success">New password sent to your mail</string>
    <string name="waiting">Waiting...</string>
    <!-- main -->
    <string name="textbook">TextBook</string>
    <string name="me">ME</string>
    <string name="buy">BUY</string>
    <string name="sell">SELL</string>

    <!-- mypost -->
    <string name="mypost_title">My Post</string>
    <string name="can_not_cancel">Post was not canceled</string>
    <string name="cancel_success">Post was canceled</string>
    <string name="delete">Delete</string>
    <!-- message -->
    <string name="message_title">Messages</string>

    <!-- sell -->
    <string name="attach">Attached with classnote</string>
    <string name="book_name">Book name(*):</string>
    <string name="author">Author(*):</string>
    <string name="edition">Edition(*):</string>
    <string name="price">Price:</string>
    <string name="Description">Description:</string>
    <string name="Note">Note:</string>
    <string name="btn_sell">Sell</string>
    <string name="nearby">Nearby request</string>
    <string name="post_success">Post was successfull</string>
    <string name="post_not_success">Post was not successfull</string>
    <string name="update_post_not_success">Post was not updated</string>
    <string name="update_post_success">Post was updated successfully</string>
    <string name="can_not_get_location">Sorry, can not get your location this time</string>
    <string name="post_3_minutes">You only can post after 3 minutes</string>

    <!-- nearby -->
    <string name="nearby_title">Nearby Request</string>

    <!-- buy -->
    <string name="btn_request">Request</string>
    <string name="btn_refresh">Refresh</string>
    <string name="name_book_needed">\"Book name\" field can not empty</string>
    <string name="no_result">No result found</string>

    <!-- request -->
    <string name="btn_ok">Ok</string>
    <string name="btn_cancel">Cancel</string>
    <string name="request_title">Request Book</string>
    <string name="send_chat_success">Sent successful</string>
    <string name="send_chat_failed">Sent failed</string>

    <!-- detail book -->
    <string name="book_name_2">Book name:</string>
    <string name="author_2">Author:</string>
    <string name="price_2">Price:</string>
    <string name="edition_2">Edition:</string>
    <string name="des_2">Description:</string>
    <string name="condition_2">Condition:</string>
    <string name="distance_2">Distance:</string>
    <string name="others">Others Book</string>
    <string name="chat_title">Chat history</string>
    <string name="detail_title">Detail Book</string>

    <!-- message detail -->
    <string name="reply">Reply</string>
    <string name="link_to_detail_book">Link to detail book</string>
    <string name="send">Send</string>

    <!-- setting -->
    <string name="distance_3">Distance:</string>
    <string name="mile5">5 Km</string>
    <string name="mile10">10 Km</string>
    <string name="mile15">15 Km</string>
    <string name="update">Update</string>
    <string name="setting_title">Settings</string>
    <string name="change_pass">Change Password</string>
    <string name="current_pass">Current password</string>
    <string name="new_pass">New password</string>
    <string name="confirm">Confirm password</string>
    <string name="can_not_change">Password is not changed</string>
    <string name="password_changed">Password is changed</string>
    <string name="type_full">All fields must be completed</string>
    <string name="password_not_confirm">Password does not match the confirm password.</string>
    <string name="logout">Logout</string>
    <!-- detail request -->
    <string name="detail_request">Detail Request</string>
    <string name="message">Message</string>
    <string name="update_success">Update was successful</string>
    <string name="update_not_success">Update was not successful</string>
    <string name="wifi_gps">Wifi and mobile network location not found</string>
    <!-- my post request -->
    <string name="change">Change</string>
    <string name="back">Back</string>

    <!-- dialog -->
    <string name="dl_message">Message</string>
    <string name="dl_btn_ok">Ok</string>
    <string name="dl_name_needed">\"Username\" field can not empty</string>
    <string name="dl_email_needed">\"Email\" field can not empty</string>
    <string name="dl_password_needed">\"Password\" field can not empty</string>
    <string name="dl_password_character">Password must be at least 8 characters</string>
    <string name="dl_answer_needed">\"Answer\" field can not empty</string>
    <string name="dl_email_format">Email is not valid</string>
    <string name="dl_bookname_needed">\"Book name\" field can not empty</string>
    <string name="dl_author_needed">\"Author\" field can not empty</string>
    <string name="dl_edition_needed">\"Edition\" field can not empty</string>
    <string name="dl_yes">Yes</string>
    <string name="dl_no">No</string>
    <string name="signup_success">Sign up successfully. Do you want to signin with this account?</string>
    <string name="dl_username_needed">"Email" field can not empty</string>
    <string name="a_connect_internet">Please connect to working Internet connection</string>
    <string name="login_fail">Wrong email or password</string>
    <string name="type_message">Please type text</string>
    <string name="dl_ask_delete">Do you want to delete this post?</string>
    <string name="network_not_found">Network is not available. Please check your network connection on your mobile.</string>
    <string name="network_not_available">Network not available, Some features might not function correctly.</string>
    <string name="network_not_found_title">Network not found</string>

    <!-- progcess dialog -->
    <string name="pd_logining">Loading...</string>
    <string name="change_pass_success">Change password success</string>

    <!-- GCM -->
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Push Notifications</string>
    <string name="error_config">Please set the %1$s constant and recompile the app.</string>
    <string name="already_registered">Device is already registered on server.</string>
    <string name="gcm_registered">From GCM: device successfully registered!</string>
    <string name="gcm_unregistered">From GCM: device successfully unregistered!</string>
    <string name="gcm_message">From GCM: you got message!</string>
    <string name="gcm_error">From GCM: error (%1$s).</string>
    <string name="gcm_recoverable_error">From GCM: recoverable error (%1$s).</string>
    <string name="gcm_deleted">From GCM: server deleted %1$d pending messages!</string>
    <string name="server_registering">Trying (attempt %1$d/%2$d) to register device on Demo Server.</string>
    <string name="server_registered">From Demo Server: successfully added device!</string>
    <string name="server_unregistered">From Demo Server: successfully removed device!</string>
    <string name="server_register_error">Could not register device on Demo Server after %1$d attempts.</string>
    <string name="server_unregister_error">Could not unregister device on Demo Server (%1$s).</string>
    <string name="options_register">Register</string>
    <string name="options_unregister">Unregister</string>
    <string name="options_clear">Clear</string>
    <string name="options_exit">Exit</string>
    <string name="action_settings">Settings</string>
    <string name="str_message">Message</string>
    <string name="str_btnok">Ok</string>
    <string name="url_share_tw">『TextBookCrazy』 is application which can find where you&#8217;re popular.DL is here → https://play.google.com/store/apps/details?id=com.cnc.textbookcrazy</string>
    <string name="post_tw_complete">Completed</string>
    <string name="post_tw_erorr">Posting was failed.</string>
    
    <string name="blockers">Blockers</string>

</resources>