<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:pj="http://schemas.android.com/apk/res/com.cnc.textbookcrazy"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#faf0cf" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <include
                android:layout_height="58dp"
                layout="@layout/topbar" />

            <RelativeLayout
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp" >

                <ImageView
                    android:id="@+id/avatar"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent" />

                <com.cnc.textbookcrazy.help.MLRoundedImageView
                    android:id="@+id/avatar_2"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_launcher"
                    pj:color="#0f5344" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:orientation="vertical" >

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edt_su_username"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/tv_username"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_centerVertical="true"
                        android:paddingLeft="5dp"
                        android:text="@string/username"
                        android:textSize="17sp" />

                    <EditText
                        android:id="@+id/edt_username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/edt_su_username"
                        android:gravity="left|center_vertical"
                        android:paddingLeft="100dp"
                        android:paddingRight="5dp"
                        android:singleLine="true"
                        android:textSize="17sp" />
                </RelativeLayout>

                <Button
                    android:id="@+id/btn_change_pass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/btn_forgot_pass"
                    android:text="@string/change_pass"
                    android:textColor="@color/yellow"
                    android:textSize="17sp" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/edt_su_username"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_centerVertical="true"
                        android:paddingLeft="5dp"
                        android:text="@string/email"
                        android:textSize="17sp" />

                    <TextView
                        android:id="@+id/tv_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/edt_su_username"
                        android:gravity="left|center_vertical"
                        android:paddingLeft="100dp"
                        android:paddingRight="5dp"
                        android:singleLine="true"
                        android:textSize="17sp" />
                </RelativeLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/alert"
                        android:textSize="17sp"
                        android:textStyle="bold" />

                    <CheckBox
                        android:id="@+id/cb_email"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="40dp"
                        android:text="Email"
                        android:textSize="17sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/security_question"
                    android:textSize="17sp"
                    android:textStyle="bold" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/edt_su_username"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_centerVertical="true"
                        android:paddingLeft="5dp"
                        android:text="@string/question"
                        android:textSize="17sp" />

                    <Spinner
                        android:id="@+id/spinner_question"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/edt_su_username"
                        android:gravity="left|center_vertical"
                        android:paddingLeft="80dp"
                        android:paddingRight="5dp"
                        android:singleLine="true"
                        android:textSize="17sp" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/edt_su_username"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/tv_username"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_centerVertical="true"
                        android:paddingLeft="5dp"
                        android:text="@string/answer"
                        android:textSize="17sp" />

                    <EditText
                        android:id="@+id/edt_answer"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/edt_su_username"
                        android:gravity="left|center_vertical"
                        android:paddingLeft="100dp"
                        android:paddingRight="5dp"
                        android:singleLine="true"
                        android:textSize="17sp" />
                </RelativeLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/distance_3"
                    android:textColor="#000000"
                    android:textSize="17sp" />

                <RadioGroup
                    android:id="@+id/radio_distance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <RadioButton
                        android:id="@+id/rad_5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/mile5"
                        android:textColor="#000000"
                        android:textSize="17sp" />

                    <RadioButton
                        android:id="@+id/rad_10"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:text="@string/mile10"
                        android:textColor="#000000"
                        android:textSize="17sp" />

                    <RadioButton
                        android:id="@+id/rad_15"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:text="@string/mile15"
                        android:textColor="#000000"
                        android:textSize="17sp" />
                </RadioGroup>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal" >

                    <Button
                        android:id="@+id/btn_submit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="10dp"
                        android:layout_weight="1"
                        android:background="@drawable/btn_forgot_pass"
                        android:text="@string/update"
                        android:textColor="@color/yellow"
                        android:textSize="20sp" />

                    <Button
                        android:id="@+id/btn_cancel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_weight="1"
                        android:background="@drawable/btn_forgot_pass"
                        android:text="@string/cancel"
                        android:textColor="@color/yellow"
                        android:textSize="20sp" />
                </LinearLayout>

                <Button
                    android:id="@+id/btn_logout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/btn_forgot_pass"
                    android:text="@string/logout"
                    android:textColor="@color/yellow"
                    android:textSize="17sp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</FrameLayout>